Refactor hero section and remove quick stats
Removed quick stats section and updated hero title.

--- a/index.html
+++ b/index.html
@@ -532,12 +532,12 @@
           <div>
             <div class="hero-tag">
               <span class="hero-tag-dot"></span>
-              <span>Finance • Data • Code</span>
+              <span>Finance • Data</span>
             </div>
 
             <h1 class="hero-title">
               <span class="hero-highlight">Portfolio Repository</span><br />
-              Projects and artifacts by Paul McCoy.
+              Projects by Paul McCoy.
             </h1>
 
             <p class="hero-subtitle">
@@ -573,35 +573,6 @@
               <span>Automation & tooling</span>
             </div>
           </div>
-
-          <aside class="hero-card">
-            <div class="hero-card-title">Quick Stats</div>
-            <div class="hero-grid">
-              <div class="hero-pill">
-                <div class="hero-pill-label">Repository</div>
-                <div class="hero-pill-value">paulmccoy03/portfolio</div>
-              </div>
-              <div class="hero-pill">
-                <div class="hero-pill-label">Key Areas</div>
-                <div class="hero-pill-value">
-                  Finance, data analysis, text processing
-                </div>
-              </div>
-              <div class="hero-pill">
-                <div class="hero-pill-label">Languages</div>
-                <div class="hero-pill-value">
-                  Python, R, HTML, Excel / Jupyter
-                </div>
-              </div>
-              <div class="hero-pill">
-                <div class="hero-pill-label">Artifacts</div>
-                <div class="hero-pill-value">
-                  Notebook, Excel, scripts, PDF report
-                </div>
-              </div>
-            </div>
-          </aside>
-        </section>
 
         <!-- NOTEBOOKS -->
         <section id="notebooks">
