Update project descriptions and contact text

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 
             <h1 class="hero-title">
               <span class="hero-highlight">Portfolio Repository</span><br />
-              Projects and artifacts by Paul McCoy.
+              Projects by Paul McCoy.
             </h1>
 
             <p class="hero-subtitle">
@@ -827,7 +827,7 @@
           <div class="section-header">
             <h2 class="section-title">Contact</h2>
             <p class="section-subtitle">
-              For questions about any of these projects or artifacts, feel free
+              For questions about any of these projects or related topics, feel free
               to reach out.
             </p>
           </div>
@@ -835,8 +835,7 @@
           <div class="contact-card">
             <div>
               <strong>Let’s connect.</strong><br />
-              Use this repository as a starting point to talk about projects,
-              roles, or collaborations.
+              Always up for a chat.
             </div>
             <div class="contact-links">
               <a class="pill-link" href="mailto:paulmccoy890@gmail.com">
