--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
           <div>
             <div class="hero-tag">
               <span class="hero-tag-dot"></span>
-              <span>Finance • Data • Code</span>
+              <span>Finance • Data</span>
             </div>
 
             <h1 class="hero-title">
