Update contact email address in index.html

--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
         <p>
             Interested in talking about accounting, finance, or data projects?
             Reach me at
-            <a href="mailto:paulmccoy@mail.wvu.edu">paulmccoy@mail.wvu.edu</a>.
+            <a href="mailto:paulmccoy890@gmail.com">paulmccoy890@gmail.com</a>.
         </p>
     </section>
 </main>
